<resources>
    <string name="app_name">Android Food Ordering</string>
    <string name="slogan">The best restaurant that offers delicious and healthy food in town. Place an order and get it delivered between 2 hours irrespective of your location.</string>
    <string name="get_started">GET STARTED</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="no_text"> </string>
    <string name="name_hint">Name</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="address_hint">Address</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="password_hint">Password</string>
    <string name="login_page">Login Page</string>
    <string name="fill_all_fields">All fields must be filled</string>
    <string name="invalid_email">You have entered invalid email</string>
    <string name="failed_login">Login failed!! Try again</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="terms_of_service">By signing up you agree to the terms of service and privacy policy</string>
    <string name="sign_in_account">Create new account</string>
    <string name="failed_registration">User registration failed. Please try again</string>
    <string name="maximum_length">Name or Username length must be greater than 5</string>
    <string name="title_activity_main">Main Restaurant</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="menu_categories">Menu categories</string>
    <string name="menu_items">Menu items</string>
    <string name="order_history">Your Orders </string>
    <string name="favorite_menu">Your Favorites</string>
    <string name="hot_deals">Hot deals</string>
    <string name="track_order">Order Tracking</string>
    <string name="push_notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="havana">Havana Restaurant n Bar</string>
    <string name="location">Nygatan 20, 24241 Horby Sweden</string>
    <string name="restuarant_home">Restaurant Home</string>
    <string name="opening_hours">Open until 10 pm week days and 11 pm weekends</string>
    <string name="test">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using</string>
    <string name="our_meals">Our Meals</string>
    <string name="goto_menu">GO TO MENU</string>
    <string name="call_us">CALL US</string>
    <string name="pizza">Pizza</string>
    <string name="manu_categories">Menu Categories</string>
    <string name="paparika_salad">Paparika Salad with Chicken</string>
    <string name="price">$30.00</string>
    <string name="with_meat">With meat</string>
    <string name="view_details">View details</string>
    <string name="pizza_categories">Pizza Categories</string>
    <string name="shrimps_with_potato">Shrimps with potato</string>
    <string name="menu_details_and_nutrition">Menu details and nutrition</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="item_options">Item Options</string>
    <string name="add_note">ADD NOTE</string>
    <string name="add_to_cart"> ADD TO CART</string>
    <string name="search">Search</string>
    <string name="favorite_menu_items">Favorite Menu</string>
    <string name="salad_cream">Salad Cream</string>
    <string name="my_history">Order History</string>
    <string name="_15_october_2016">15 October, 2016</string>
    <string name="delivered">DELIVERED</string>
    <string name="rice_and_beans">Rice and beans with stew</string>
    <string name="tracking_on">Tracking on</string>
    <string name="hot_deal_menus">Trending Hot Deals</string>
    <string name="my_profile">Profile</string>
    <string name="philips_johnson">Philips Johnson</string>
    <string name="profile_address">Nygatan 20, Horby, Sweden</string>
    <string name="address">Address: </string>
    <string name="phone">Phone:</string>
    <string name="phone_number">+46720199164</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="edit_cart">EDIT CART</string>
    <string name="this_week_menu">OUR WEEKLY MENU</string>
    <string name="contact_information">Contact Information</string>
    <string name="email">Email</string>
    <string name="havanarestaurant_yahoo_com">havanarestaurant@yahoo.com</string>
    <string name="view_detail">View details</string>
    <string name="view_hot_deals">VIEW HOT DEALS</string>
    <string name="edit_user_profile">Edit User Profile</string>
    <string name="cannot_edit_user">Cannot edit user! Please try again</string>
    <string name="update_success">User profile successfully update</string>
    <string name="customize_your_order">CUSTOMIZE YOUR ORDER</string>
    <string name="no_information">No information found about this menu</string>
    <string name="no_option_item">There is no option in this menu item</string>
    <string name="add_note_to_menu_item_optional">Add note to menu item (optional)</string>
    <string name="order_items">Items: </string>
    <string name="two">2</string>
    <string name="total">Total: </string>
    <string name="amount">$49.50</string>
    <string name="total_amount">Amount</string>
    <string name="vat_amount">$0.00</string>
    <string name="order_vat">VAT:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="checkout">CHECKOUT</string>
    <string name="add_extra_pepper">Add extra pepper, sauce, chicken</string>
    <string name="remove_order_item">Remove</string>
    <string name="minus">-</string>
    <string name="plus_button">+</string>
    <string name="your_cart">Your Cart</string>
    <string name="action_cart">Shopping cart</string>
    <string name="back_to_menu">BACK TO MENU</string>
    <string name="proceed_to_payment">PROCEED TO PAYMENT</string>
    <string name="order_item_list">Order Item List</string>
    <string name="add_new_delivery_address">ADD NEW DELIVERY ADDRESS</string>
    <string name="select_payment_method">ADD NEW CARD PAYMENT</string>
    <string name="place_an_order_now">PLACE AN ORDER NOW</string>
    <string name="select_a_payment_method">SELECT A PAYMENT METHOD</string>
    <string name="pay_with_pay_pal">PAY WITH PAY PAL</string>
    <string name="pay_with_credit_card">PAY WITH CREDIT CARD</string>
    <string name="pay_cash_on_delivery">PAY CASH ON DELIVERY</string>
    <string name="your_primary_address">YOUR PRIMARY ADDRESS</string>
    <string name="street">Street</string>
    <string name="zip_code">Zip code</string>
    <string name="country">Country</string>
    <string name="save_new_address">SAVE NEW ADDRESS</string>
    <string name="new_address">New delivery address</string>
    <string name="my_checkout">Checkout</string>
    <string name="your_saved_credit_card_details">YOUR SAVED CREDIT CARD DETAILS</string>
    <string name="card_number">**** 73838</string>
    <string name="cvc">CVC</string>
    <string name="add_new_payment_credit_card">ADD NEW PAYMENT CREDIT CARD</string>
    <string name="credit_card_number">Card number</string>
    <string name="expiration_date">Expiration date</string>
    <string name="save_new_credit_card">SAVE NEW CREDIT CARD</string>
    <string name="add_new_card_title">Add new credit card</string>
    <string name="order_comfirmation">ORDER CONFIRMATION</string>
    <string name="order_thank_you">Thank you for placing your order with us. Your order ID is GHH1234</string>
    <string name="order_message">We usually delivery our orders within an hour. We will keep you informed through out the steps until it gets to your door step through notification.</string>
    <string name="start_order_tracking">START ORDER TRACKING</string>
    <string name="order_processing_steps">ORDER PROCESSING STEPS</string>
    <string name="order_completed">Order Completed</string>
    <string name="order_in_delivery">Order in delivery</string>
    <string name="order_in_process">Order in process</string>
    <string name="order_has_been_placed">Order has been placed</string>
    <string name="your_delivery_address">YOUR DELIVERY ADDRESS</string>
    <string name="locate_and_track_with_map">LOCATE AND TRACK WITH MAP</string>
    <string name="title_activity_order_tracking">Order Tracking</string>
    <string name="distance_2_km">DISTANCE: 2 KM</string>
    <string name="duration_2_4_mins">DURATION: 2.4 MINS</string>
    <string name="timer_count_down">The order processing is in progress. Once the order status is on delivery, the timer will start counting down</string>
    <string name="pref_header_notifications">Push Notifications</string>
    <string name="pref_title_new_message_notifications">Register or unregister for hot deals and promotion Notification</string>
    <string name="pref_header_general">Tab Menu Website</string>
    <string name="push_notifications">Push Notification Settings</string>
    <string name="past_orders">View Past Order</string>

</resources>
