<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.inducesmile.androidfoodordering.NewPaymentActivity">

    <Button
        android:id="@+id/save_new_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/_16sdp"
        android:text="@string/save_new_credit_card"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/activity_new_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/your_saved_credit_card_details"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_12sdp"
            android:paddingTop="@dimen/_12sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add_note"
                android:src="@drawable/paytwo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:text="@string/card_number"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:text="@string/cvc"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:text="@string/add_new_payment_credit_card"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bottom_border"
            android:hint="@string/credit_card_number"
            android:inputType="number"
            android:maxLines="1"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBorder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/expire_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_4sdp"
                android:background="@drawable/bottom_border"
                android:hint="@string/expiration_date"
                android:inputType="date"
                android:maxLines="1"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBorder" />

            <EditText
                android:id="@+id/cvc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@drawable/bottom_border"
                android:hint="@string/cvc"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBorder" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
