<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_option"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    android:background="@drawable/intro_bg"
    tools:context="com.inducesmile.androidfoodordering.LoginOptionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/quiz_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/food_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:textColor="#fffac1"
            android:textSize="@dimen/_11sdp"
            android:padding="@dimen/_8sdp"
            android:text="@string/slogan"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_weight="1">

        <Button
            android:id="@+id/sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/_4sdp"
            android:textColor="@color/colorWhite"
            android:text="@string/sign_in"
            android:textSize="@dimen/_10sdp"
            android:background="@color/colorPrimary"/>

        <Button
            android:id="@+id/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="@dimen/_4sdp"
            android:text="@string/sign_up"
            android:textSize="@dimen/_10sdp"
            android:background="@color/colorPrimary"/>

    </LinearLayout>


</LinearLayout>
